[package]
name = "rust"
version = "1.0.0"
authors = ["Yu_212"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "lib.rs"

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.86"
console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
#rayon = "1.7.0"
#wasm-bindgen-rayon = "1.0.3"


[dev-dependencies]
wasm-bindgen-test = "0.3.36"
