[package]
name = "rust"
version = "1.0.0"
authors = ["Yu_212"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "lib.rs"

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.86"
console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
getrandom = { version = "0.2.10", features = ["js"] }
rand = "0.8.5"
itertools = "0.10.5"
web-sys = { version = "0.3.64", features = ["Performance"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.36"
