[package]
name = "rust"
version = "1.0.0"
authors = ["Yu_212"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "wasm.rs"

[[bin]]
name = "bench"
path = "bench.rs"

[dependencies]
rand = "0.8.5"
itertools = "0.11.0"

[target.'cfg(target_arch = "x86_64")'.dependencies]
getrandom = "0.2.10"
bytes = "1.5.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.86"
console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
web-sys = { version = "0.3.64", features = ["Performance"] }
js-sys = "0.3.64"
getrandom = { version = "0.2.10", features = ["js"] }
bytes = "1.5.0"
